@@ -99,6 +99,19 @@ do	: $( : $RANDOM $RANDOM $RANDOM )
 done
 [[ $got == "$exp" ]] || err_exit 'Using $RANDOM in subshell influences reproducible sequence in parent environment' \
 	"(expected $(printf %q "$exp"), got $(printf %q "$got"))"
+# Forking a subshell shouldn't throw away the $RANDOM seed in the main shell
+exp=$(ulimit -t unlimited; RANDOM=123; echo $RANDOM)
+RANDOM=123
+(ulimit -t unlimited; true)
+got=${ echo $RANDOM ;}
+[[ $got == "$exp" ]] || err_exit "Forking a subshell resets the parent shell's \$RANDOM seed" \
+	"(expected $(printf %q "$exp"), got $(printf %q "$got"))"
+# Similarly, forking a subshell shouldn't throw away a seed
+# previously set inside of the subshell
+exp=$(ulimit -t unlimited; RANDOM=789; echo $RANDOM)
+got=$(RANDOM=789; ulimit -t unlimited; echo $RANDOM)
+[[ $got == "$exp" ]] || err_exit "Forking a subshell resets the subshell's \$RANDOM seed" \
+	"(expected $(printf %q "$exp"), got $(printf %q "$got"))"
 unset N i rand1 rand2
 
 # SECONDS
