@@ -3,6 +3,15 @@ For full details, see the git log at: https://github.com/ksh93/ksh
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2021-11-18:
+
+- Fixed a regression introduced on 2021-05-03 that caused forking a subshell
+  to reset $RANDOM's seed in the parent shell.
+
+- Fixed a performance regression introduced on 2021-05-03 that caused
+  the shbench[*] fibonacci benchmark to run slower.
+  [*]: https://github.com/ksh-community/shbench
+
 2021-11-16:
 
 - By default, arithmetic expressions in ksh no longer interpret a number
